Fix server-status page flex issue on smaller screens

--- a/public/less/server-status.less
+++ b/public/less/server-status.less
@@ -48,6 +48,11 @@ table, tr, td {
 	margin-right: 6px;
 
 	gt-box {
+		flex: none;
+		height: 190px;
+	}
+
+	#host {
 		flex: 1;
 	}
 }
